--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ sysinfo = "0.34.2"
 rand = "0.8"
 procfs = "0.15"
 num_cpus = "1.16"
+glam = "0.30.2"
+crossterm = "0.29.0"
 
 [dev-dependencies]
 tokio = { version = "1.35", features = ["full"] }
